--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@tato30/vue-pdf": "^1.9.6",
     "flowbite": "^2.3.0",
+    "fs": "^0.0.1-security",
     "pdfjs-dist": "^4.1.392",
     "socket.io-client": "^4.7.5",
     "vue": "^3.4.21",
@@ -24,7 +25,7 @@
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.8.0",
     "@tsconfig/node20": "^20.1.4",
-    "@types/node": "^20.12.5",
+    "@types/node": "^20.14.2",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vue/eslint-config-prettier": "^9.0.0",
     "@vue/eslint-config-typescript": "^13.0.0",
