--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-VITE_SOCKET_HOST = 'https://mirror8.gieom.com'
+# VITE_SOCKET_HOST = 'https://mirror8.gieom.com'
+
 VITE_RECAPTCHA_PUBLIC_KEY = "6LfzHL8pAAAAAMPIDRVeLjVYWnf98RuRggDVN8--"
