--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 # VITE_SOCKET_HOST = 'https://mirror8.gieom.com'
 
 VITE_RECAPTCHA_PUBLIC_KEY = "6LfzHL8pAAAAAMPIDRVeLjVYWnf98RuRggDVN8--"
+VITE_FILE_BASE="http://216.48.185.120:8520/uploads/"
