--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@tailwindcss/container-queries": "^0.1.1",
     "@tato30/vue-pdf": "^1.9.6",
     "flowbite": "^2.3.0",
     "fs": "^0.0.1-security",
+    "marked": "^13.0.3",
     "pdfjs-dist": "^4.1.392",
     "socket.io-client": "^4.7.5",
     "vue": "^3.4.21",
