--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tato30/vue-pdf": "^1.9.6",
     "flowbite": "^2.3.0",
     "fs": "^0.0.1-security",
+    "html2pdf.js": "^0.10.2",
     "marked": "^13.0.3",
     "pdfjs-dist": "^4.1.392",
     "socket.io-client": "^4.7.5",
