--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@tato30/vue-pdf": "^1.9.6",
+    "docx-preview": "^0.3.2",
     "exceljs": "^4.4.0",
     "file-saver": "^2.0.5",
     "flowbite": "^2.3.0",
