--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "file-saver": "^2.0.5",
     "flowbite": "^2.3.0",
     "fs": "^0.0.1-security",
+    "marked": "^14.1.3",
     "pdfjs-dist": "^4.1.392",
     "socket.io-client": "^4.7.5",
     "vue": "^3.4.21",
