--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
     "file-saver": "^2.0.5",
     "flowbite": "^2.3.0",
     "fs": "^0.0.1-security",
-    "pdfjs-dist": "^4.1.392",
+    "pdfjs-dist": "^4.7.76",
     "socket.io-client": "^4.7.5",
     "vue": "^3.4.21",
+    "vue-pdf": "^4.3.0",
     "vue-recaptcha-v3": "^2.0.1",
     "vue-router": "^4.3.0"
   },
@@ -38,11 +39,13 @@
     "eslint": "^8.57.0",
     "eslint-plugin-vue": "^9.23.0",
     "npm-run-all2": "^6.1.2",
+    "pdf2html": "^3.1.0",
     "postcss": "^8.4.38",
     "prettier": "^3.2.5",
     "tailwindcss": "^3.4.3",
     "typescript": "~5.4.0",
     "vite": "^5.2.8",
+    "vite-plugin-commonjs": "^0.10.3",
     "vite-plugin-top-level-await": "^1.4.1",
     "vue-tsc": "^2.0.11"
   }
