--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "flowbite": "^2.3.0",
     "fs": "^0.0.1-security",
     "pdfjs-dist": "^4.7.76",
+    "rxjs": "^7.8.1",
     "socket.io-client": "^4.7.5",
     "vue": "^3.4.21",
     "vue-pdf": "^4.3.0",
